<resources>
    <string name="app_name">Instagram Login-Page Clone</string>
    <string name="app_logo">Main Application Logo</string>
    <string name="user_name">Username</string>
    <string name="user_pw">Password</string>
    <string name="login_help1">Forgot your login details?</string>
    <string name="login_help2"> Get help signing in.</string>
    <string name="divider_text">OR</string>
    <string name="login_intoFb">Log in with Facebook</string>
    <string name="sign_up">Don\'t have an account? Sign Up.</string>
</resources>
