<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/app_logo"
        android:contentDescription="@string/app_logo"
        android:layout_width="match_parent"
        android:layout_marginEnd="200dp"
        android:layout_height="100dp"
        android:src="@drawable/instagram_app_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"/>

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_marginEnd="60dp"
        android:layout_height="50dp"
        android:layout_below="@+id/app_logo"
        android:layout_centerHorizontal="true"
        android:hint="@string/user_name"
        android:textSize="20sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColorHint="#DEA4C9"
        android:background="@drawable/input_background"
        android:layout_marginTop="15dp"
        android:inputType="text"
        android:textColor="#ffffff"
        android:autofillHints=""
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_marginEnd="60dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/user_name"
        android:hint="@string/user_pw"
        android:textSize="20sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textColorHint="#DEA4C9"
        android:background="@drawable/input_background"
        android:layout_marginTop="15dp"
        android:inputType="textPassword"
        android:textColor="#ffffff"
        android:autofillHints="" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_marginEnd="60dp"
        android:layout_height="50dp"
        android:background="@drawable/textview_border"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:text="Log In"
        android:textSize="18sp"
        android:textColor="#22F2F2F2"
        android:textAllCaps="false"
        android:shadowColor="@android:color/transparent"
        android:layout_marginTop="15dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/forgetpw_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_help1"
        android:layout_below="@id/login_button"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:textColor="#DEA4C9"
        android:textSize="15sp"
        />

    <TextView
        android:id="@+id/get_helpSigning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_help2"
        android:layout_below="@+id/login_button"
        android:layout_toEndOf="@id/forgetpw_hint"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textColor="#DEA4C9"
        android:textSize="15sp"
        android:paddingLeft="3dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/get_helpSigning"
        android:layout_centerInParent="true"
        android:text="@string/divider_text"
        android:textColor="@color/text_color"
        android:id="@+id/divider_text"
        android:layout_marginTop="15dp"/>


    <Button
        android:layout_width="match_parent"
        android:layout_marginEnd="60dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:layout_below="@+id/divider_text"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:shadowColor="@android:color/transparent"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:text="@string/login_intoFb"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:drawableStart="@drawable/ic_facebook"
        android:gravity="center_vertical"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/text_color"
            android:background="@drawable/input_background"
            />
    </LinearLayout>

</RelativeLayout>